--- a/ccbrowse/www/css/navigation.scss
+++ b/ccbrowse/www/css/navigation.scss
@@ -127,7 +127,6 @@ nav {
         }
 
         .tooltip {
-            display: none;
             font-family: helvetica, sans-serif;
             font-size: 74%;
             z-index: 2;
